--- a/config/west.yml
+++ b/config/west.yml
@@ -2,22 +2,22 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: ctranstrum # <-- add this for the keyboard
-      url-base: https://github.com/ctranstrum
-    - name: caksoylar # <-- and this for the LED
-      url-base: https://github.com/caksoylar
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+//    - name: ctranstrum # <-- add this for the keyboard
+//      url-base: https://github.com/ctranstrum
+//    - name: caksoylar # <-- and this for the LED
+//      url-base: https://github.com/caksoylar
+//    # Additional modules containing boards/shields/custom code can be listed here as well
+//    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: lintilla # <-- add this for the keyboard
-      remote: ctranstrum
-      revision: zmk
-    - name: zmk-rgbled-widget # <-- and this for the LED
-      remote: caksoylar
-      revision: main
+//    - name: lintilla # <-- add this for the keyboard
+//      remote: ctranstrum
+//      revision: zmk
+//    - name: zmk-rgbled-widget # <-- and this for the LED
+//      remote: caksoylar
+//     revision: main
   self:
     path: config
